模拟GC情况